samples/_failures_safe/1761326762_387330_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c95ff78.c:132:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  132 | int main
      | ^~~
